# libpam-freerdp2

./: .build.yml  ChangeLog  Makefile.am  README.md  configure.ac
debian/: changelog  control  copyright  copyright.in  libpam-freerdp.install  libpam-freerdp2-dev.lintian-overrides  rules  watch
debian/source/: lintian-overrides
include/: pam-freerdp.h  pam-freerdp2.h
src/: Makefile.am  freerdp-auth-check.c  freerdp2-auth-check.c  pam-freerdp-children.c  pam-freerdp-private.h  pam-freerdp.c  pam-freerdp2-children.c  pam-freerdp2-children.h  pam-freerdp2-private.h  pam-freerdp2.c
tests/: Makefile.am  mock_guest.c  mock_pam.c  mock_pam.h  test-freerdp-wrapper.cc  test-freerdp2-wrapper.cc
